--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('images/login.jpg'); 
+    background-image: url('login.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
