--- a/preferences.css
+++ b/preferences.css
@@ -2,6 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    background-image: url('BG.jpg'); 
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
