--- a/register.css
+++ b/register.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-image: url('login.jpg'); 
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
