--- a/register.css
+++ b/register.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     background-image: url('login.jpg'); 
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
